<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginActivity">


    <!-- Основной контейнер -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Заголовок и подзаголовок -->
        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/light_black"
            android:textSize="24sp"
            android:fontFamily="@font/montserrat_semibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Поле для ввода email -->
        <TextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_email_text"
            android:textColor="@color/medium_gray"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintTop_toBottomOf="@id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_form"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_regular"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/email_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInnerTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textVisiblePassword"
                android:textColor="@color/extra_light_gray"
                android:textSize="14sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Поле для ввода пароля -->
        <TextView
            android:id="@+id/password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_pass_text"
            android:textColor="@color/medium_gray"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintTop_toBottomOf="@id/emailTextField"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass_form"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/password_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInnerTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textPassword"
                android:textColor="@color/medium_gray"
                android:textSize="14sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Забыли пароль? -->

        <!-- Кнопка "Войти" -->
        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="108dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="@string/login_forgot_pass"
            android:textColor="@color/violet"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTextField" />

        <Button
            android:id="@+id/button_loginnn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/loading_enter"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_medium"
            android:backgroundTint="@color/violet"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" />

        <!-- Кнопка "Войти через Google" -->
        <Button
            android:id="@+id/button_registrationnn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/login_google"
            android:textColor="@color/light_black"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_medium"
            android:backgroundTint="@color/white"
            app:cornerRadius="8dp"
            app:strokeColor="#D3D0D0"
            app:strokeWidth="1dp"
            app:layout_constraintTop_toBottomOf="@id/button_loginnn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <ImageView
            android:id="@+id/svgBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/login_google"
            android:src="@drawable/google_icon"
            android:layout_marginStart="70dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_registrationnn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_registrationnn" />

        <!-- Текст "Регистрация" -->
        <TextView
            android:id="@+id/registrationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_reg"
            android:textColor="@color/violet"
            android:textSize="14sp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:gravity="center"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/button_registrationnn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>