<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ViewPager2 для слайдов -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Контейнер для панели прогресса -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Кнопка далее -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton"
            android:layout_width="131dp"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/next_button"
            android:textSize="14sp"
            app:backgroundTint="@color/violet"
            app:cornerRadius="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Содержимое экрана онбординга -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Изображение -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="176dp"
            android:contentDescription="@string/onboarding_title1"
            android:maxWidth="540dp"
            android:maxHeight="326dp"
            android:src="@drawable/onboarding_image1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Контейнер для заголовков -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="342dp"
            android:layout_height="210dp"
            android:layout_marginBottom="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="300dp"
                android:layout_height="87dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/onboarding_title1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/onboarding_first"
                    android:textColor="@color/light_black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Индикатор прогресса (одно изображение) -->
            <ImageView
                android:id="@+id/indicators"
                android:layout_width="88dp"
                android:layout_height="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="152dp"
                android:contentDescription="@string/indicator"
                android:src="@drawable/progress_indicator1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Кнопка пропустить -->
    <TextView
        android:id="@+id/topText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/violet"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/skip_text"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>